# SiegPy

./: .gitignore  .travis.yml  CNAME  README.md  pylintrc  readthedocs.yml  setup.cfg  setup.py  tox.ini
doc/: AnalyticBasisSet.rst  AnalyticEigenstates.rst  BasisSet.rst  CoordMap.rst  Eigenstate.rst  Makefile  SWPEigenstates.rst  SmoothFunctions.rst  SymbolicPotentials.rst  TestFunctions.rst  api_objects.rst  conf.py  getting_started.rst  notebooks.rst
doc/notebooks/: completeness_relation.ipynb  completeness_relation_multiple_test_functions.ipynb  completeness_relation_problematic_cases.ipynb  convergence_MLE_strength_function.ipynb  convergence_exact_completeness_relation.ipynb  convergence_exact_strength_function.ipynb  convergence_exact_time_propagation.ipynb  find_Siegerts_1DSWP.ipynb  find_numerical_Siegert.ipynb  find_numerical_bound_and_continuum.ipynb  influence_filters_siegerts.ipynb  influence_grid_continuum.ipynb  influence_grid_siegerts.ipynb  numerical_strength_function.ipynb  strength_function.ipynb  time_propagation.ipynb  time_propagation_error_estimation_convergence.ipynb  zero_operator.ipynb
docs/: .buildinfo  1DSWPCase.html  AbstractClasses.html  AnalyticBasisSet.html  AnalyticEigenstates.html  BasisSet.html  CoordMap.html  Eigenstate.html  Filters.html  Functions.html  General1DCase.html  Hamiltonian.html  Other.html  Potential.html  SWPBasisSet.html  SWPEigenstates.html  SWPotential.html  SmoothFunctions.html  SymbolicPotentials.html  TestFunctions.html  api_objects.html  genindex.html  getting_started.html  index.html  notebooks.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_sources/: 1DSWPCase.rst.txt  AbstractClasses.rst.txt  Filters.rst.txt  Functions.rst.txt  General1DCase.rst.txt  Hamiltonian.rst.txt  Other.rst.txt  Potential.rst.txt  SWPBasisSet.rst.txt  SWPotential.rst.txt  index.rst.txt
docs/notebooks/: completeness_relation.html  completeness_relation_multiple_test_functions.html  completeness_relation_numerical_Siegert.html  completeness_relation_numerical_bound_and_continuum.html  completeness_relation_problematic_cases.html  convergence_MLE_strength_function.html  find_Siegerts_1DSWP.html  find_numerical_Siegert.html  find_numerical_bound_and_continuum.html  gaussian_potentials.html  influence_coordMap_siegerts_1.html  influence_filters_siegerts.html  influence_grid_continuum.html  influence_grid_siegerts.html  influence_virials_siegerts.html  numerical_strength_function.html  other_symbolic_potentials.html  strength_function.html  time_propagation.html  time_propagation_error_estimation.html  time_propagation_initial_momentum.html  (+1 more)
siegpy/: __init__.py  analyticbasisset.py  analyticeigenstates.py  basisset.py  coordinatemappings.py  eigenstates.py  filters.py  functions.py  hamiltonian.py  potential.py  smoothfunctions.py  swpbasisset.py  swpeigenstates.py  swpotential.py  swputils.py  symbolicpotentials.py  utils.py
(+38 files in other folders)
