[metadata]
name = SiegPy
version = 0.0.1.dev
description = Siegert states with Python
long_description = file: README.md
url = https://gitlab.maisondelasimulation.fr/lgenoves/SiegPy.git
author = L_Sim @CEA Grenoble
license = MIT
keywords = siegpy, Siegert, physics, resonant states
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Education
    Topic :: Scientific/Engineering :: Physics
    Topic :: Education
    License :: OSI Approved :: GNU General Public License (GPL)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only

[options]
packages = siegpy
install_requires =
    numpy
    scipy
    mpmath
    matplotlib
    sympy
setup_requires = 
    setuptools >= 30.3

[options.extras_require]
test =
    numpy >= 1.14  # use the new printing style for tests
    pytest
    pytest-cov
    pytest-html
    pytest-sugar
    pytest-xdist
    pytest-flake8
    tox
doc =
    sphinx
    sphinx_rtd_theme
    jupyter_client
    ipython
    ipykernel
    nbsphinx

[options.package_data]
data_file = 
    doc/notebooks/siegerts.dat
mpl_style = 
    siegpy*SiegPy.mplstyle

[aliases]
test = test

[tool:pytest]
addopts =
    # create an html report for code coverage
    --cov-report html  
    # report the missing lines
    --cov-report term-missing  
    --cov=siegpy
    # perform the doctests
    --doctest-modules  
    # maximal verbosity
    -vv
    # start with last failed tests and continue with all other tests
    --ff
    # number of tests failed before pytest stops
    # --maxfail=1
    # disable all capturing
    -s
    # create a pytest html report
    --html=pytest_report.html  
    # runs the tests on two procs
    # -n 2
    # tests PEP8 compliance
    --flake8
    # show local
    -l

[coverage:run]
omit = 
    setup.py
    siegpy/tests/*py

[coverage:report]
# Regexes for lines to exclude from consideration
exclude_lines = 
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't test the representations:
    def __repr__
    # Don't complain if tests don't hit defensive assertion code:
    raise NotImplementedError
    # Don't complain if non-runnable code isn't run:
    if __name__ == .__main__.:

[flake8]
# Accomodate with black line length
max-line-length = 88
exclude = 
    doc/conf.py
    htmlcov
    doc
    assets
    __pycache__
    *.egg*
    .tox
    .cache
    .git
ignore =
    F401 siegpy/__init__.py
    E203  # whitespace before ':'; this accomodates with black
    E226  # whitespace around operators
    E741  # ambiguous variable names
    W503  # linebreak before operators
    W504  # linebreak after operators
